# numdiff

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: CreateVersionFile.cmake
doc/: CMakeLists.txt
examples/: CMakeLists.txt
include/numdiff/: config_version.hpp.cmake  numdiff.hpp
test/: CMakeLists.txt
